@@ -1,4 +1,27 @@
 #!/usr/bin/env python
+#from __future__ import print_function
+
+"""
+      + '\n== TEST epix10ka2m:'\
+      + '\n  cp /reg/g/psdm/detector/data_test/geometry/geo-epix10ka2m-test.txt .'\
+      + '\n  %s -f geo-epix10ka2m-test.txt -o geo-epix10ka2m-test-cframe-psana.geom --cframe 0' % scrname\
+      + '\n  %s -d epix10ka -f geo-epix10ka2m-test-cframe-psana.geom -o geo-epix10ka2m-test-back.txt' % scrname\
+      + '\n  then see the minor difference between geo-epix10ka2m-test.txt and geo-epix10ka2m-test-back.txt'\
+      + '\n  or check image with each of geometry files:'\
+      + '\n  geometry_image -g geo-epix10ka2m-test-back.txt -a /reg/g/psdm/detector/data_test/npy/nda-mfxc00118-r0184-epix10ka2m-silver-behenate-max.txt -R10 -i0'\
+      + '\n'\
+      + '\n== TEST cspad (xpp for complete consistency between initial and final file):'\
+      + '\n  cp /reg/g/psdm/detector/data_test/geometry/geo-cspad-test.data .'\
+      + '\n  %s -f geo-cspad-test.data -o geo-cspad-test-cframe-psana.geom --cframe 0' % scrname\
+      + '\n  %s -d cspadv2 -f geo-cspad-test-cframe-psana.geom -o geo-cspad-test-back.data' % scrname\
+      + '\n  geometry_image -g geo-cspad-test.data -a /reg/g/psdm/detector/data_test/npy/nda-mfx11116-r0624-e005365-MfxEndstation-0-Cspad-0-max.txt -R10 -i0'\
+      + '\n'\
+      + '\n== TEST jungfrau:'\
+      + '\n  cp /reg/g/psdm/detector/data_test/geometry/geo-jungfrau-8-test.data .'\
+      + '\n  %s -f geo-jungfrau-8-test.data -o geo-jungfrau-8-test-cframe-psana.geom --cframe 0' % scrname\
+      + '\n  %s -d jungfrau -f geo-jungfrau-8-test-cframe-psana.geom -o geo-jungfrau-8-test-back.data' % scrname\
+      + '\n  geometry_image -g geo-jungfrau-8-test.data -a /reg/g/psdm/detector/data_test/npy/nda-cxilv9518-r0008-jungfrau-lysozyme-max.npy -R10 -i0'\
+"""
 
 import sys
 import logging
@@ -20,7 +43,7 @@ if __name__ == "__main__":
 
     d_dettype = 'epix10ka'
     d_fname   = fname_epix10ka2m_16
-    d_ofname  = 'geo-crystfel.txt'
+    d_ofname  = 'geo-crystfel.geom'
     d_loglev  ='INFO'
     d_cframe  = 1
     h_cframe = 'coordinate frame 0/1 for psana/LAB, def=%s. Works for PSANA->CRYSTFEL conversion ONLY'% d_cframe\
@@ -29,47 +52,30 @@ if __name__ == "__main__":
                ' PSANA->CRYSTFEL->PSANA should not change constants in the geometry file (up to precision lose at conversion)'\
                ' if they are defined for the same coordinate frame. For this type of test parameter should be set to 0 to keep psana frame unchanged.'
     h_fname = 'input geometry file name. File name extention *.geom launches converter from CrystFEL to psana, def=%s' % d_fname
+    h_dettype = 'USED FOR CRYSTFEL TO PSANA ONLY - detector type, one of epix10ka, jungfrau, cspad (with quads), cspadv2 (no quads), pnccd, def=%s' % d_dettype
 
     usage = '\n  %s -h' % scrname\
-      + '\n  %s -d epix10ka -f %s -o geo_crystfel.geom -l DEBUG' % (scrname, d_fname)\
+      + '\n  %s -f %s -o geo-crystfel.geom' % (scrname, d_fname)\
+      + '\n'\
       + '\n  cp /reg/g/psdm/detector/data_test/geometry/geo-cspad-xpp.data .'\
-      + '\n  %s -d cspad -f geo-cspad-xpp.data -o geo-cspad-xpp-crystfel.geom        # conversion from psana to crystfel' % scrname\
+      + '\n  %s -f geo-cspad-xpp.data -o geo-cspad-xpp-crystfel.geom                 # conversion from psana to crystfel' % scrname\
       + '\n  %s -d cspadv2 -f geo-cspad-xpp-crystfel.geom -o geo-cspad-xpp-back.data # conversion from crystfel to psana' % scrname\
-      + '\n'\
-      + '\n== TEST epix10ka2m:'\
-      + '\n  cp /reg/g/psdm/detector/data_test/geometry/geo-epix10ka2m-test.txt .'\
-      + '\n  %s -d epix10ka -f geo-epix10ka2m-test.txt -o geo-epix10ka2m-test-cframe-psana.geom --cframe 0' % scrname\
-      + '\n  %s -d epix10ka -f geo-epix10ka2m-test-cframe-psana.geom -o geo-epix10ka2m-test-back.txt' % scrname\
-      + '\n  then see the minor difference between geo-epix10ka2m-test.txt and geo-epix10ka2m-test-back.txt'\
-      + '\n  or check image with each of geometry files:'\
-      + '\n  geometry_image -g geo-epix10ka2m-test-back.txt -a /reg/g/psdm/detector/data_test/npy/nda-mfxc00118-r0184-epix10ka2m-silver-behenate-max.txt -R10 -i0'\
-      + '\n'\
-      + '\n== TEST cspad (xpp for complete consistency between initial and final file):'\
-      + '\n  cp /reg/g/psdm/detector/data_test/geometry/geo-cspad-test.data .'\
-      + '\n  %s -d cspad -f geo-cspad-test.data -o geo-cspad-test-cframe-psana.geom --cframe 0' % scrname\
-      + '\n  %s -d cspadv2 -f geo-cspad-test-cframe-psana.geom -o geo-cspad-test-back.data' % scrname\
-      + '\n  geometry_image -g geo-cspad-test.data -a /reg/g/psdm/detector/data_test/npy/nda-mfx11116-r0624-e005365-MfxEndstation-0-Cspad-0-max.txt -R10 -i0'\
-      + '\n'\
-      + '\n== TEST jungfrau:'\
-      + '\n  cp /reg/g/psdm/detector/data_test/geometry/geo-jungfrau-8-test.data .'\
-      + '\n  %s -d jungfrau -f geo-jungfrau-8-test.data -o geo-jungfrau-8-test-cframe-psana.geom --cframe 0' % scrname\
-      + '\n  %s -d jungfrau -f geo-jungfrau-8-test-cframe-psana.geom -o geo-jungfrau-8-test-back.data' % scrname\
-      + '\n  geometry_image -g geo-jungfrau-8-test.data -a /reg/g/psdm/detector/data_test/npy/nda-cxilv9518-r0008-jungfrau-lysozyme-max.npy -R10 -i0'\
-
+      + '\n'
 
     parser = argparse.ArgumentParser(usage=usage, description='Converts geometry constants from psana to CrystFEL format and backward (see --fname).')
-    parser.add_argument('-d', '--dettype', default=d_dettype, type=str, help='detector type, one of epix10ka, jungfrau, cspad, pnccd, def=%s' % d_dettype)
     parser.add_argument('-f', '--fname',   default=d_fname,   type=str, help=h_fname)
     parser.add_argument('-o', '--ofname',  default=d_ofname,  type=str, help='output file name, def=%s' % d_ofname)
     parser.add_argument('-l', '--loglev',  default=d_loglev,  type=str, help='logging level name, one of %s, def=%s' % (STR_LEVEL_NAMES, d_loglev))
     parser.add_argument('--cframe',        default=d_cframe,  type=int, help=h_cframe)
+    parser.add_argument('-d', '--dettype', default=d_dettype, type=str, help=h_dettype)
 
     args = parser.parse_args()
-    print('Arguments:')
-    for k,v in vars(args).items(): print('  %12s : %s' % (k, str(v)))
+    s = 'Arguments:'
+    for k,v in vars(args).items(): s += '  %12s : %s' % (k, str(v))
 
     logging.basicConfig(format='[%(levelname).1s] L%(lineno)04d: %(message)s', datefmt='%Y-%m-%dT%H:%M:%S', level=DICT_NAME_TO_LEVEL[args.loglev])
     logging.debug('Logger is initialized for level %s' % args.loglev)
+    logging.info(s)
 
     extent = args.fname.rsplit('.',1)[-1]
     logging.info('input file name extension %s' % extent)
