@@ -9,6 +9,12 @@ Package author: Mikhail Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V02-00-22
+2021-12-16 Mikhail Dubrovin
+- geometry_convert - get rid of parameter --dettype in psana to CrystFEL converter
+	modified:   ../app/geometry_convert
+	modified:   ../doc/ChangeLog
+
 Tag: V02-00-21
 2021-12-15 Mikhail Dubrovin
 - 1-st working version of UtilsPSF with separated testUtilsPSF.py
